<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditPasswordActivity">

    <View
        android:id="@+id/viewRedBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/headerCardView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="8dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonBack"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/red"
                        android:contentDescription="@string/back_to_previous_screen"
                        android:elevation="12dp"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/arrow"
                        app:iconGravity="start"
                        app:iconSize="30dp"
                        app:iconTint="@color/white" />

                    <TextView
                        android:id="@+id/textTitleHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/edit_password"
                        android:textColor="@color/text_accessibility"
                        android:textSize="24sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <!-- First Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/field_name"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/grey_light"
                    app:hintTextColor="@color/grey_light"
                    app:startIconContentDescription="@string/icon_description_name"
                    app:startIconDrawable="@drawable/globe"
                    app:startIconTint="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        app:hintTextColor="@color/grey_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/field_username"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/grey_light"
                    app:hintTextColor="@color/grey_light"
                    app:startIconContentDescription="@string/icon_description_email"
                    app:startIconDrawable="@drawable/email"
                    app:startIconTint="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        app:hintTextColor="@color/grey_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/field_password"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/grey_light"
                    app:hintTextColor="@color/grey_light"
                    app:startIconContentDescription="@string/icon_description_password"
                    app:startIconDrawable="@drawable/lock_solid"
                    app:endIconTint="@color/grey"
                    app:endIconMode="password_toggle"
                    app:startIconTint="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        app:hintTextColor="@color/grey_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/field_url"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/grey_light"
                    app:hintTextColor="@color/grey_light"
                    app:startIconContentDescription="@string/icon_description_url"
                    app:startIconDrawable="@drawable/url"
                    app:startIconTint="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        app:hintTextColor="@color/grey_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/field_description"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeColor="@color/grey_light"
                    app:hintTextColor="@color/grey_light"
                    app:startIconContentDescription="@string/icon_description_description"
                    app:startIconDrawable="@drawable/description"
                    app:startIconTint="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="95dp"
                        android:inputType="text"
                        android:textColor="@color/black"
                        app:hintTextColor="@color/grey_light" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_save"
        android:textColor="@color/white"
        app:cardElevation="15dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
